@@ -1,0 +1,16 @@
+Kalotaszeg utca 1
+Kalotaszeg utca 3
+Kalotaszeg utca 5
+Kalotaszeg utca 7
+Kalotaszeg utca 7/A
+Kalotaszeg utca 7/B
+Kalotaszeg utca 7a
+Kalotaszeg utca 7b
+Kalotaszeg utca 7 c
+Kalotaszeg utca 9
+Kalotaszeg utca 9 AB
+Kalotaszeg utca 11
+Kalotaszeg utca 11 ABC
+Kalotaszeg utca 13
+Kalotaszeg utca 13-15
+Kalotaszeg utca 13-15 B
