@@ -1,0 +1,3 @@
+@id	name	highway	service	surface	leisure
+24746223	Kalotaszeg utca	residential		asphalt	
+695548547	Kalotaszeg utca	residential			
